# HALCON-Demo

./: README.md
Halcon/: CMakeLists.txt  CMakeLists.txt.user.c011a5d  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_2.cpp  mainwindow_2.h  mainwindow_2.ui  widget.cpp  widget.ui  workthread.cpp  workthread.h
LearnHALCON/: CMakeLists.txt  LearnHALCON.cpp  LearnHALCON.h  main.cpp
